--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 
 <head>
@@ -35,9 +34,9 @@
       connection = new WebSocket(url);
       connection.onopen = function () {
         console.log('connected!');
-        var json={"objid":"<%=objid%>","door":"001"};
+        var json={objid:"<%=objid%>",door:"001"};
         console.log(json);
-        connection.send(json);
+        connection.send("001");
       };
       connection.onerror = function (err) {
         console.log('error: ' + err);
