--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>LeanEngine websocket demo</title>
-  <link href="http://terminal.jcubic.pl/css/jquery.terminal.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -25,8 +24,7 @@
 
   </div>
 
-  <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-  <script src="http://terminal.jcubic.pl/js/jquery.terminal-0.8.8.min.js"></script>
+  <script src="../jquery-1.7.2.min.js"></script>
   <script>
     jQuery(function ($, undefined) {
       var url = 'ws://' + window.location.host + '/open/echo';
