--- a/views/header.ejs
+++ b/views/header.ejs
@@ -39,8 +39,15 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <style>
-        .huge{padding-bottom: 21px;margin-top: 10px}
-        .ui.grid{margin-left: 1rem;margin-right: -1rem}
+        .huge {
+            padding-bottom: 21px;
+            margin-top: 10px
+        }
+
+        .ui.grid {
+            margin-left: 1rem;
+            margin-right: -1rem
+        }
     </style>
 </head>
 
@@ -103,7 +110,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-user fa-fw"></i> 用户管理<span class="fa arrow"></span></a>
+                            <a href="#"><i class="fa fa-user fa-fw"></i> 人员管理<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
                                     <a href="../admin/employee">用户管理</a>
