--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -1,6 +1,6 @@
 <% include header %>
-        <div id="page-wrapper">
-            <div class="container-fluid">
+    <div id="page-wrapper">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">用户信息</h1>
@@ -19,11 +19,8 @@
                             <ul class="nav nav-tabs">
                                 <li class="active"><a href="#home" data-toggle="tab">已审核用户</a>
                                 </li>
-                                <li><a href="#profile" data-toggle="tab">申请用户</a>
+                                <li><a href="#profile" data-toggle="tab">用户申请审核</a>
                                 </li>
-                                <li><a href="#messages" data-toggle="tab">访客申请</a>
-                                </li>
-
                             </ul>
 
                             <!-- Tab panes -->
@@ -46,12 +43,20 @@
                                 </div>
                                 <div class="tab-pane fade" id="profile">
                                     <br>
-                                </div>
-                                <div class="tab-pane fade" id="messages">
-                                    <br>
-                                </div>
-                                <div class="tab-pane fade" id="settings">
-                                    <br>
+                                    <table id="table1" class="ui celled table" cellspacing="0" width="100%">
+                                        <thead>
+                                            <tr>
+                                                <th>序号</th>
+                                                <th>公司名称</th>
+                                                <th>楼层</th>
+                                                <th>门牌号</th>
+                                                <th>姓名</th>
+                                                <th>电话</th>
+                                                <th>微信昵称</th>
+                                                <th>审核</th>
+                                            </tr>
+                                        </thead>
+                                    </table>
                                 </div>
                             </div>
 
@@ -67,113 +72,162 @@
     </div>
     <!-- /#page-wrapper -->
 
-</div>
-<!-- /#wrapper -->
+    </div>
+    <!-- /#wrapper -->
 
-<!-- jQuery -->
-<script src="../vendor/jquery/jquery.min.js"></script>
+    <!-- jQuery -->
+    <script src="../vendor/jquery/jquery.min.js"></script>
 
-<!-- Bootstrap Core JavaScript-->
-<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript-->
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-<!-- Metis Menu Plugin JavaScript -->
-<script src="../vendor/metisMenu/metisMenu.min.js"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
+    <!-- Custom Theme JavaScript -->
 
-<script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../dist/js/sb-admin-2.js"></script>
 
-<script src="../dist/js/semantic.min.js"></script>
-<script src="../dist/js/jquery.dataTables.min.js"></script>
-<script src="../dist/js/dataTables.semanticui.min.js"></script>
-<script src="../dist/js/dataTables.buttons.min.js"></script>
-<script src="../dist/js/buttons.semanticui.min.js"></script>
-<script src="../dist/js/dataTables.select.min.js"></script>
-<script src="../dist/js/dataTables.editor.min.js"></script>
-<script src="../dist/js/editor.semanticui.min.js"></script>
-<script>
-var editor;
-$(document).ready(function() {
-        editor = new $.fn.dataTable.Editor( {
-        ajax: {
-            create: {
-                type: 'POST',
-                url:  '../api/json/employee/add'
-            },
-            edit: {
-                type: 'PUT',
-                url:  '../api/json/employee/edit/_id_'
-            },
-            remove: {
-                type: 'DELETE',
-                url:  '../api/json/employee/remove/_id_'
-            }
-        },
-        table: "#table",
-        fields: [
-            { label: '公司名称', name: 'company' },
-            { label: '楼层',  name: 'floor'  },
-            { label: '门牌号',  name: 'number'  },
-            { label: '姓名',  name: 'name'  },
-            { label: '电话',  name: 'phone'  },
-            { label: '微信昵称',  name: 'nickname'  }
-        ],i18n: {
-                create: {
-                    button: "新增",
-                    title:  "新建一个用户",
-                    submit: "创建"
+    <script src="../dist/js/semantic.min.js"></script>
+    <script src="../dist/js/jquery.dataTables.min.js"></script>
+    <script src="../dist/js/dataTables.semanticui.min.js"></script>
+    <script src="../dist/js/dataTables.buttons.min.js"></script>
+    <script src="../dist/js/buttons.semanticui.min.js"></script>
+    <script src="../dist/js/dataTables.select.min.js"></script>
+    <script src="../dist/js/dataTables.editor.min.js"></script>
+    <script src="../dist/js/editor.semanticui.min.js"></script>
+    <script>
+        var editor;
+        $(document).ready(function () {
+            editor = new $.fn.dataTable.Editor({
+                ajax: {
+                    create: {
+                        type: 'POST',
+                        url: '../api/json/employee/add'
+                    },
+                    edit: {
+                        type: 'PUT',
+                        url: '../api/json/employee/edit/_id_'
+                    },
+                    remove: {
+                        type: 'DELETE',
+                        url: '../api/json/employee/remove/_id_'
+                    }
                 },
-                edit: {
-                    button: "编辑",
-                    title:  "用户资料修改",
-                    submit: "更新"
-                },
-                remove: {
-                    button: "删除",
-                    title:  "删除",
-                    submit: "删除",
-                    confirm: {
-                        _: "确定要删除 %d 条吗?",
-                        1: "确定要删除这条用户资料吗?"
+                table: "#table",
+                fields: [
+                    { label: '公司名称', name: 'company' },
+                    { label: '楼层', name: 'floor' },
+                    { label: '门牌号', name: 'number' },
+                    { label: '姓名', name: 'name' },
+                    { label: '电话', name: 'phone' },
+                    { label: '微信昵称', name: 'nickname' }
+                ], i18n: {
+                    create: {
+                        button: "新增",
+                        title: "新建一个用户",
+                        submit: "创建"
+                    },
+                    edit: {
+                        button: "编辑",
+                        title: "用户资料修改",
+                        submit: "更新"
+                    },
+                    remove: {
+                        button: "删除",
+                        title: "删除",
+                        submit: "删除",
+                        confirm: {
+                            _: "确定要删除 %d 条吗?",
+                            1: "确定要删除这条用户资料吗?"
+                        }
                     }
                 }
-            }
-    } );
-    var table= $('#table').DataTable( {
-        "processing": true,
-        stateSave: true,
-        "dom": '<"top"Brf>t<"bottom"ilp>',
-        "ajax": '../api/json/employee',
-        "columns": [
-            {"data":null},
-            { "data": "company" },
-            { "data": "floor" },
-            { "data": "number" },
-            { "data": "name" },
-            { "data": "phone" },
-            { "data": "nickname" }
-        ],
-        select:true,
-        buttons: [
-    
-    { extend: "edit",  editor: editor },
-    { extend: "remove", editor: editor }
-    ] ,
-        "order": [[1, 'asc']],
-        "language": {
-            "url": "../vendor/zh_CN.txt"
-        }
-    });
-    table.on('order.dt search.dt',function() {
+            });
+            var table = $('#table').DataTable({
+                "processing": true,
+                stateSave: true,
+                "dom": '<"top"Brf>t<"bottom"ilp>',
+                "ajax": '../api/json/employee',
+                "columns": [
+                    { "data": null },
+                    { "data": "company" },
+                    { "data": "floor" },
+                    { "data": "number" },
+                    { "data": "name" },
+                    { "data": "phone" },
+                    { "data": "nickname" }
+                ],
+                select: true,
+                buttons: [
+
+                    { extend: "edit", editor: editor },
+                    { extend: "remove", editor: editor }
+                ],
+                "order": [[1, 'asc']],
+                "language": {
+                    "url": "../vendor/zh_CN.txt"
+                }
+            });
+            table.on('order.dt search.dt', function () {
                 table.column(0, {
                     search: 'applied',
                     order: 'applied'
-                }).nodes().each(function(cell, i) {
+                }).nodes().each(function (cell, i) {
                     cell.innerHTML = i + 1;
                 });
             }).draw();
-});
-</script>
-</body>
 
-</html>
+            var table1 = $('#table1').DataTable({
+                "processing": true,
+                stateSave: true,
+                "dom": '<"top"Brf>t<"bottom"ilp>',
+                "ajax": '../api/json/employee/apply',
+                "columns": [
+                    { "data": null },
+                    { "data": "company" },
+                    { "data": "floor" },
+                    { "data": "number" },
+                    { "data": "name" },
+                    { "data": "phone" },
+                    { "data": "nickname" },
+                    { "data": null }
+                ],
+                select: true,
+                buttons: [
+                    { extend: "edit", editor: editor },
+                    { extend: "remove", editor: editor }
+                ],
+                "columnDefs": [{
+                    "targets": 7,//操作按钮目标列
+                    "render": function (data, type, row) {
+                        var id = '"' + row.id + '"';
+                        var html = "<a href='javascript:void(0);'  class='btn btn-default btn-xs'  onclick='pass(" + id + ")'><i class='fa fa-check'></i> 通过</a>"
+                        html += "<a href='javascript:void(0);'   onclick='deny(" + id + ")'  class='btn btn-default btn-xs'><i class='fa fa-times'></i> 拒绝</a>"
+                        return html;
+                    }
+                }],
+                "order": [[1, 'asc']],
+                "language": {
+                    "url": "../vendor/zh_CN.txt"
+                }
+            });
+            table1.on('order.dt search.dt', function () {
+                table1.column(0, {
+                    search: 'applied',
+                    order: 'applied'
+                }).nodes().each(function (cell, i) {
+                    cell.innerHTML = i + 1;
+                });
+            }).draw();
+            function pass(id){
+                
+            }
+            function deny(id){
+
+            }
+        });
+    </script>
+    </body>
+
+    </html>
