--- a/views/visitor.ejs
+++ b/views/visitor.ejs
@@ -1,6 +1,6 @@
 <% include header %>
-        <div id="page-wrapper">
-            <div class="container-fluid">
+    <div id="page-wrapper">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">访客信息</h1>
@@ -16,18 +16,35 @@
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <table id="table" class="ui celled table" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>序号</th>
-                                        <th>公司名称</th>
-                                        <th>楼层</th>
-                                        <th>门牌号</th>
-                                        <th>联系人</th>
-                                        <th>联系人电话</th>
-                                    </tr>
-                                </thead>
-                            </table>
+                            <ul class="nav nav-tabs">
+                                <li class="active"><a href="#home" data-toggle="tab">访客历史</a>
+                                </li>
+                                <li><a href="#profile" data-toggle="tab">访客申请</a>
+                                </li>
+                            </ul>
+
+                            <!-- Tab panes -->
+                            <div class="tab-content">
+                                <div class="tab-pane fade in active" id="home">
+                                    <br>
+                                    <table id="table" class="ui celled table" cellspacing="0" width="100%">
+                                        <thead>
+                                            <tr>
+                                                <th>序号</th>
+                                                <th>公司名称</th>
+                                                <th>楼层</th>
+                                                <th>门牌号</th>
+                                                <th>联系人</th>
+                                                <th>联系人电话</th>
+                                            </tr>
+                                        </thead>
+                                    </table>
+                                </div>
+                                <div class="tab-pane fade" id="profile">
+                                    <br>
+                                </div>
+                            </div>
+
                         </div>
                         <!-- /.panel-body -->
                     </div>
@@ -40,111 +57,111 @@
     </div>
     <!-- /#page-wrapper -->
 
-</div>
-<!-- /#wrapper -->
+    </div>
+    <!-- /#wrapper -->
 
-<!-- jQuery -->
-<script src="../vendor/jquery/jquery.min.js"></script>
+    <!-- jQuery -->
+    <script src="../vendor/jquery/jquery.min.js"></script>
 
-<!-- Bootstrap Core JavaScript-->
-<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap Core JavaScript-->
+    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 
-<!-- Metis Menu Plugin JavaScript -->
-<script src="../vendor/metisMenu/metisMenu.min.js"></script>
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
 
-<!-- Custom Theme JavaScript -->
+    <!-- Custom Theme JavaScript -->
 
-<script src="../dist/js/sb-admin-2.js"></script>
+    <script src="../dist/js/sb-admin-2.js"></script>
 
-<script src="../dist/js/semantic.min.js"></script>
-<script src="../dist/js/jquery.dataTables.min.js"></script>
-<script src="../dist/js/dataTables.semanticui.min.js"></script>
-<script src="../dist/js/dataTables.buttons.min.js"></script>
-<script src="../dist/js/buttons.semanticui.min.js"></script>
-<script src="../dist/js/dataTables.select.min.js"></script>
-<script src="../dist/js/dataTables.editor.min.js"></script>
-<script src="../dist/js/editor.semanticui.min.js"></script>
-<script>
-var editor;
-$(document).ready(function() {
-        editor = new $.fn.dataTable.Editor( {
-        ajax: {
-            create: {
-                type: 'POST',
-                url:  '../api/json/company/add'
-            },
-            edit: {
-                type: 'PUT',
-                url:  '../api/json/company/edit/_id_'
-            },
-            remove: {
-                type: 'DELETE',
-                url:  '../api/json/company/remove/_id_'
-            }
-        },
-        table: "#table",
-        fields: [
-            { label: '公司名称', name: 'name' },
-            { label: '楼层',  name: 'floor'  },
-            { label: '门牌号',  name: 'number'  },
-            { label: '联系人',  name: 'connecter'  },
-            { label: '联系人电话',  name: 'phone'  }
-        ],i18n: {
-                create: {
-                    button: "新增",
-                    title:  "新建一个公司",
-                    submit: "创建"
+    <script src="../dist/js/semantic.min.js"></script>
+    <script src="../dist/js/jquery.dataTables.min.js"></script>
+    <script src="../dist/js/dataTables.semanticui.min.js"></script>
+    <script src="../dist/js/dataTables.buttons.min.js"></script>
+    <script src="../dist/js/buttons.semanticui.min.js"></script>
+    <script src="../dist/js/dataTables.select.min.js"></script>
+    <script src="../dist/js/dataTables.editor.min.js"></script>
+    <script src="../dist/js/editor.semanticui.min.js"></script>
+    <script>
+        var editor;
+        $(document).ready(function () {
+            editor = new $.fn.dataTable.Editor({
+                ajax: {
+                    create: {
+                        type: 'POST',
+                        url: '../api/json/company/add'
+                    },
+                    edit: {
+                        type: 'PUT',
+                        url: '../api/json/company/edit/_id_'
+                    },
+                    remove: {
+                        type: 'DELETE',
+                        url: '../api/json/company/remove/_id_'
+                    }
                 },
-                edit: {
-                    button: "编辑",
-                    title:  "公司资料修改",
-                    submit: "更新"
-                },
-                remove: {
-                    button: "删除",
-                    title:  "删除",
-                    submit: "删除",
-                    confirm: {
-                        _: "确定要删除 %d 条吗?",
-                        1: "确定要删除这条公司资料吗?"
+                table: "#table",
+                fields: [
+                    { label: '公司名称', name: 'name' },
+                    { label: '楼层', name: 'floor' },
+                    { label: '门牌号', name: 'number' },
+                    { label: '联系人', name: 'connecter' },
+                    { label: '联系人电话', name: 'phone' }
+                ], i18n: {
+                    create: {
+                        button: "新增",
+                        title: "新建一个公司",
+                        submit: "创建"
+                    },
+                    edit: {
+                        button: "编辑",
+                        title: "公司资料修改",
+                        submit: "更新"
+                    },
+                    remove: {
+                        button: "删除",
+                        title: "删除",
+                        submit: "删除",
+                        confirm: {
+                            _: "确定要删除 %d 条吗?",
+                            1: "确定要删除这条公司资料吗?"
+                        }
                     }
                 }
-            }
-    } );
-    var table= $('#table').DataTable( {
-        "processing": true,
-        stateSave: true,
-        "dom": '<"top"Brf>t<"bottom"ilp>',
-        "ajax": '../api/json/company',
-        "columns": [
-            {"data":null},
-            { "data": "name" },
-            { "data": "floor" },
-            { "data": "number" },
-            { "data": "connecter" },
-            { "data": "phone" }
-        ],
-        select:true,
-        buttons: [
-    { extend: "create", editor: editor },
-    { extend: "edit",  editor: editor },
-    { extend: "remove", editor: editor }
-    ] ,
-        "order": [[1, 'asc']],
-        "language": {
-            "url": "../vendor/zh_CN.txt"
-        }
-    });
-    table.on('order.dt search.dt',function() {
+            });
+            var table = $('#table').DataTable({
+                "processing": true,
+                stateSave: true,
+                "dom": '<"top"Brf>t<"bottom"ilp>',
+                "ajax": '../api/json/company',
+                "columns": [
+                    { "data": null },
+                    { "data": "name" },
+                    { "data": "floor" },
+                    { "data": "number" },
+                    { "data": "connecter" },
+                    { "data": "phone" }
+                ],
+                select: true,
+                buttons: [
+                    { extend: "create", editor: editor },
+                    { extend: "edit", editor: editor },
+                    { extend: "remove", editor: editor }
+                ],
+                "order": [[1, 'asc']],
+                "language": {
+                    "url": "../vendor/zh_CN.txt"
+                }
+            });
+            table.on('order.dt search.dt', function () {
                 table.column(0, {
                     search: 'applied',
                     order: 'applied'
-                }).nodes().each(function(cell, i) {
+                }).nodes().each(function (cell, i) {
                     cell.innerHTML = i + 1;
                 });
             }).draw();
-});
-</script>
-</body>
+        });
+    </script>
+    </body>
 
-</html>
+    </html>
