--- a/views/header.ejs
+++ b/views/header.ejs
@@ -116,12 +116,14 @@
                                     <a href="../admin/employee">用户管理</a>
                                 </li>
                                 <li>
-                                    <a href="../admin/visitor">访客管理</a>
+                                    <a href="../admin/visitor">访客申请记录</a>
                                 </li>
                             </ul>
                             <!-- /.nav-second-level -->
                         </li>
-
+                        <li>
+                            <a href="../admin/history"><i class="fa fa-history fa-fw"></i> 门禁记录</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
