--- a/views/history.ejs
+++ b/views/history.ejs
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">访客信息</h1>
+                    <h1 class="page-header">门禁记录</h1>
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
@@ -12,7 +12,7 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            访客申请记录
+                            门禁记录
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -25,14 +25,11 @@
                                         <thead>
                                             <tr>
                                                 <th>序号</th>
-                                                <th>访客姓名</th>
-                                                <th>手机</th>
-                                                <th>来访目的</th>
-                                                <th>来访日期</th>
+                                                <th>人员</th>
                                                 <th>门牌号</th>
-                                                <th>被访人</th>
-                                                <th>被访公司</th>
-                                                <th>审核结果</th>
+                                                <th>门编号</th>
+                                                <th>电话</th>
+                                                <th>时间</th>
                                             </tr>
                                         </thead>
                                     </table>
@@ -85,17 +82,14 @@
                 "processing": true,
                 stateSave: true,
                 "dom": '<"top"rf>t<"bottom"ilp>',
-                "ajax": '../api/json/visitor',
+                "ajax": '../api/json/history',
                 "columns": [
                     { "data": null },
                     { "data": "name" },
-                    { "data": "phone" },
-                    { "data": "content" },
-                    { "data": "day" },
+                    { "data": "door" },
                     { "data": "number" },
-                    { "data": "interviewee" },
-                    { "data": "company" },
-                    { "data": "pass" }
+                    { "data": "phone" },
+                    { "data": "time" }
                 ],
                 select: true,
                 "order": [[1, 'asc']],
