--- a/views/audit.ejs
+++ b/views/audit.ejs
@@ -135,7 +135,7 @@
                     value: 8
                 }
             ], {
-                    defaultValue: [2],
+                    defaultValue: ['2小时'],
                     onChange: function (result) {
                         console.log(result);
                     },
