--- a/views/fail.ejs
+++ b/views/fail.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
   <meta charset="UTF-8">
   <title>失败</title>
@@ -13,24 +14,37 @@
     .header {
       text-align: center;
     }
+
     .header h1 {
       font-size: 200%;
       color: #333;
       margin-top: 30px;
     }
+
     .header p {
       font-size: 14px;
     }
   </style>
 </head>
-<body>
-<div id="form">
-          <h1><%=title%></h1>
-</div>
-<link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
-<script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.1/weui.min.js"></script>
-<script type="text/javascript">
 
-</script>
+<body>
+  <div id="form">
+    <h1>
+      <%=title%>
+    </h1>
+  </div>
+  <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/1.1.0/weui.min.css">
+  <script type="text/javascript" src="https://res.wx.qq.com/open/libs/weuijs/1.1.1/weui.min.js"></script>
+  <script type="text/javascript">
+    setTimeout(function () {
+      //在这里编写你需要延迟执行的代码
+
+      if (<%=state %>==0){
+        window.location.href = "../menu";
+      }
+    }, 2000);
+
+  </script>
 </body>
+
 </html>
