--- a/views/history.ejs
+++ b/views/history.ejs
@@ -92,7 +92,7 @@
                     { "data": "time" }
                 ],
                 select: true,
-                "order": [[1, 'asc']],
+                "order": [[5, 'desc']],
                 "language": {
                     "url": "../vendor/zh_CN.txt"
                 }
