--- a/views/employee.ejs
+++ b/views/employee.ejs
@@ -294,7 +294,7 @@
                 ], i18n: {
                     edit: {
                         button: "审核",
-                        title: "用户资料修改",
+                        title: "审核用户资料",
                         submit: "通过"
                     },
                     remove: {
