--- a/views/visit.ejs
+++ b/views/visit.ejs
@@ -44,9 +44,9 @@
         <div class="weui-cell__ft"> <i class="weui-icon-warn"></i> </div>
       </div>
       <div class="weui-cell">
-        <div class="weui-cell__hd"><label class="weui-label">门牌号</label></div>
-        <div class="weui-cell__bd"> <input id="door" class="weui-input" type="text" required="" maxlength="8" placeholder="输入门牌号" emptytips="请输入门牌号"
-            notmatchtips="请输入门牌号">
+        <div class="weui-cell__hd"><label class="weui-label">公司名</label></div>
+        <div class="weui-cell__bd"> <input id="door" class="weui-input" type="text" required="" maxlength="8" placeholder="输入公司名" emptytips="请输入公司名"
+            notmatchtips="请输入公司名">
         </div>
         <div class="weui-cell__ft"> <i class="weui-icon-warn"></i> </div>
       </div>
